# kkpenco

./: .gitignore  Antigravity.lnk  backend_log.txt  kk_logs.csv  last_log.txt  reproduce_issue.py  reproduce_login.py  requirements.txt  test_api_client.py  test_db_insert.py  test_net.py  test_stats.py  verify_auth_local.py
.github/workflows/: build.yml
backend/: .env.example  database.py  main.py  requirements.txt
backend/routers/: chat.py  events_stable_admin_export.py  events_stable_auth_email.py  events_stable_stats_logic.py  users.py  users_stable_auth_complete.py  users_stable_auth_email.py
flutter_app/: .firebaserc  README.md  diff.txt  firebase.json  firestore.indexes.json  firestore.rules  pubspec.yaml  run_log_3.txt
flutter_app/lib/: firebase_options.dart  main.dart
flutter_app/test/: admin_logic_test.dart  widget_test.dart
mobile_app/: app_log.txt  app_log_debug.txt  app_log_debug_2.txt  app_log_debug_3.txt  app_log_debug_4.txt  app_log_debug_5.txt  app_log_debug_6.txt  install_android_env.ps1  main_flet.py  main_flet_stable_admin_export.py  main_flet_stable_auth_complete.py  main_flet_stable_auth_email.py  main_flet_stable_chat_fixed.py  main_flet_stable_delete_feature.py  main_flet_stable_hof_and_stats.py  main_flet_stable_v2.py  pyproject.toml  storage_log.txt  test_api.py  test_desktop.py  test_storage.py  verify_connection.py
mobile_app/src/kkcos/: __main__.py  api.py  api_stable_auth_complete.py  api_stable_delete_feature.py  api_stable_v2.py  app.py
shared/: __init__.py  models.py  models_stable_auth_email.py  models_stable_v2.py
(+57 files in other folders)
